--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@heroicons/react": "^2.0.18",
-    "@mui/material": "^5.14.6",
+    "@heroicons/react": "^2.1.1",
+    "@mui/material": "^5.15.10",
     "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "10.4.15",
     "bcryptjs": "^2.4.3",
+    "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
-    "framer-motion": "^10.16.1",
-    "mongoose": "^7.4.5",
+    "framer-motion": "^11.0.5",
+    "mongoose": "^8.1.2",
     "next": "^14.1.0",
-    "next-auth": "^4.23.1",
-    "postcss": "8.4.28",
+    "next-auth": "^4.24.6",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
+    "react-icons": "^5.0.1",
     "react-pin-input": "^1.3.1",
-    "react-player": "^2.12.0",
+    "react-player": "^2.14.1",
     "tailwind-scrollbar": "^3.0.5",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.4.1"
